# creditcard_cv_showoff

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
hardware/: esp32_iot_board.kicad_pcb  esp32_iot_board.kicad_prl  esp32_iot_board.kicad_pro  esp32_iot_board.kicad_sch  esp32_iot_board.xml  fp-info-cache
hardware/production/esp32_iot_board_2024-02-18_10-54-26/: bom.csv  designators.csv  netlist.ipc  positions.csv
main/: CMakeLists.txt  main.cpp
main/App/include/: ble_test.hpp  button_test.hpp  co2sensor_test.hpp  driver_test.hpp  lcd_test.hpp  moist_sensor.hpp  plc_mock.hpp  wifi_test.hpp
main/App/src/: ble_test.cpp  button_test.cpp  co2sensor_test.cpp  driver_test.cpp  lcd_test.cpp  moist_sensor.cpp  plc_mock.cpp  wifi_test.cpp
main/Components/: CMakeLists.txt
main/Components/CO2Sensor/include/: S8LP_Modbus_api.hpp  s8lp_sensor.hpp
main/Components/CO2Sensor/src/: S8LP_Modbus_api.cpp  s8lp_sensor.cpp
main/Components/CO2Sensor/test/: test_main.cpp
main/Components/GPIO/include/: GPIO_API.hpp  HAL_GPIO_ESP32.hpp
main/Components/GPIO/src/: HAL_GPIO_ESP32.cpp  HAL_MOCK.cpp
main/Components/GPIO/test/test/: simple_test.cpp
main/Components/GPIO/test_build/: Makefile  sample1_unittest
main/Components/Template/test/test/: simple_test.cpp
main/Components/Timeservice/: CMakeLists.txt
main/Components/Timeservice/include/: Timeservice.hpp
main/Components/Timeservice/src/: Timeservice.cpp
main/Components/Timeservice/test/: CMakeLists.txt  test_main.cpp  tests
main/Components/Timeservice/test/src/: time_test.cpp
main/Components/Timeservice/test/test/: time_test.cpp
main/Components/adc/include/: ADCBase.hpp  ADC_API_ESP32.hpp
main/Components/adc/src/: ADC_API_ESP32.cpp
main/Components/adc/test/: CMakeLists.txt  tests
main/Components/adc/test/test/: ADC_test.cpp
main/Components/am2320/: CMakeLists.txt
main/Components/am2320/include/: AM2320_Base.hpp  AM2320_Humidity.hpp  AM2320_Temperature.hpp
main/Components/am2320/src/: AM2320_Base.cpp  AM2320_Humidity.cpp  AM2320_Temperature.cpp
main/Components/am2320/test/: CMakeLists.txt  tests
main/Components/am2320/test/test/: simple_test.cpp
main/Components/bluetooth/include/: ble_gap_esp32.hpp  ble_server_esp32.hpp
main/Components/bluetooth/src/: ble_gap_esp32.cpp  ble_server_esp32.cpp
main/Components/bluetooth/test_build/: Makefile
main/Components/boards/esp32_boards/include/: esp32_env_v1_0.hpp  esp32_i2c_adapter_v1_0.hpp  esp32_i2c_adc_battery_v1_0.hpp  esp32_servo_board_v1_0.hpp
main/Components/boards/esp32_boards/test/: CMakeLists.txt
main/Components/button/: CMakeLists.txt
main/Components/button/include/: Button.hpp
main/Components/button/test/: CMakeLists.txt  tests
main/Components/button/test/test/: simple_test.cpp
main/Components/gpio/include/: GPIO_API.hpp  HAL_BASE.hpp  HAL_GPIO_ESP32.hpp  HAL_MOCK.hpp
main/Components/gpio/src/: HAL_MOCK.cpp
main/Components/gpio/test/: tests
main/Components/gpio/test/test/: simple_test.cpp
main/Components/http/: CMakeLists.txt
main/Components/http/include/: esp32_http_sal.hpp
main/Components/http/src/: esp32_http_sal.cpp
main/Components/http/test/: CMakeLists.txt  tests
main/Components/http/test/test/: esp32_http_sal_test.cpp
main/Components/i2c/include/: i2c.hpp  i2c_common.hpp  i2c_esp32.hpp
main/Components/i2c/src/: i2c_esp32.cpp
main/Components/i2c/test/: CMakeLists.txt  test_main.cpp  tests
main/Components/i2c/test/mock/: i2c_mock.hpp
main/Components/i2c/test/test/: i2c_test.cpp
main/Components/lcd_display/: CMakeLists.txt
main/Components/lcd_display/include/: hal_base.hpp  lcd_data.hpp  lcd_interface.hpp  lcd_mock.hpp  lcd_nhd_c12832a1z_esp_card_showoff.hpp
main/Components/lcd_display/src/: lcd_mock.cpp  lcd_nhd_c12832a1z_esp_card_showoff.cpp
main/Components/lcd_display/test/: tests
main/Components/lcd_display/test/test/: simple_test.cpp
main/Components/spi/include/: spi_esp32.hpp
main/Components/spi/src/: spi_esp32.cpp
main/Components/uart/: CMakeLists.txt
main/Components/uart/include/: uart_hal.hpp
main/Components/uart/src/: uart_hal.cpp
main/Components/uart/test/: CMakeLists.txt  tests
main/Components/utils/include/: utils.h
main/Components/utils/src/: utils.cpp
main/Components/utils/test/: CMakeLists.txt  tests
main/Components/utils/test/test/: utils_test.cpp
main/Components/wifi/: CMakeLists.txt
main/Components/wifi/include/: WiFiBase.hpp  WiFi_SAL_esp32.hpp  WiFi_SoftAP_esp32.hpp
main/Components/wifi/src/: WiFi_SAL_esp32.cpp  WiFi_SoftAP_esp32.cpp
main/Components/wifi/test/: tests
main/Components/wifi/test/test/: simple_test.cpp
tools/: convert_image.py  reconstruct_image.py
